# teefaa

./: .gitignore  .teefaa.local.yml  .teefaa.yml  .teefaa.yml.example  Makefile  README.md  README.rst  Teefaafile.yml.example  Vagrantfile  requirements.txt  setup.cfg  setup.py
doc/source/: adminguide.rst  baremetal.rst  conf.py  conf.py.org  devguide.rst  how_to_iso_boot.rst  how_to_pxe_boot.rst  how_to_scale.rst  index.rst  index.rst.bk  install.rst  license.rst  make_a_vm.rst  make_snapshot.rst  support.rst  usersguide.rst  what_is_teefaa.rst
fabfile/: __init__.py  baremetal.py  futuregrid.py  install.py  scratch.py  system.py  torque.py
share/baremetal/boot/grub/: grub.conf.redhat5  grub.conf.redhat5.xen
share/baremetal/etc/: fstab.redhat5  mtab.redhat5
src/teefaa/: baremetal_provisioning.py  teefaa.py
teefaa/: api.py  boot.py  init.py  install.py  make.py  partition.py  provision.py  shell.py  ssh.py
teefaa/lib/: boot.py  common.py  install.py  make.py  partition.py
teefaa/libexec/: __init__.py  boot.py  common.py  init.py  install.py  make.py  partition.py
tests/: test_make.py
ymlfile/baremetal/: config.yml-example
ymlfile/baremetal/hosts/: host1.yml-example
ymlfile/baremetal/images/: image1.yml-example
ymlfile/system/: host1.yml-example
