[metadata]
name = teefaa
version = 0.3.1
summary = FutureGrid: Baremetal Provisioning Toolkit
description-file = README.rst
keywords = Cloudmesh Teefaa
maintainer = Koji Tanaka, Javier Diaz, Gregor von Laszewski
maintainer_email = kj.tanaka@gmail.com
author = Koji Tanaka
author_email = kj.tanaka@gmail.com
url = https://github.com/cloudmesh/teefaa
license = Apache 2.0
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Topic :: Database
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
    Operating System :: MacOS :: MacOS X
    Topic :: Scientific/Engineering
    Topic :: System :: Clustering
    Topic :: System :: Distributed Computing

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    teefaa

#    packages = find_packages(exclude=[
#	    'ez_setup',
#	    'examples', 
#	    'tests', 
#	    'fabfile', 
#	    'ymlfile', 
#	    'private', 
#	    'share',
#	    ]),

[entry-points]
console_scripts=
    teefaa = teefaa.api:main


[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
